// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for input backup phrase 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 22,
        }
      }
    >
      backupKey
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      enablesReturnKeyAutomatically={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="backupPhrasePlaceholder"
      placeholderTextColor="#9CA4A9"
      rejectResponderTermination={true}
      shouldShowClipboard={[Function]}
      style={
        Array [
          Object {
            "borderColor": "#EDEEEF",
            "borderRadius": 4,
            "borderWidth": 1,
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "minHeight": 125,
            "padding": 14,
            "paddingTop": 16,
            "textAlignVertical": "top",
          },
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value="prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake"
    />
  </View>
</View>
`;

exports[`renders correctly for input social backup phrase 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 22,
        }
      }
    >
      socialBackupPhraseHeader
    </Text>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      enablesReturnKeyAutomatically={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder="backupPhrasePlaceholder"
      placeholderTextColor="#9CA4A9"
      rejectResponderTermination={true}
      shouldShowClipboard={[Function]}
      style={
        Array [
          Object {
            "borderColor": "#EDEEEF",
            "borderRadius": 4,
            "borderWidth": 1,
            "color": "#2E3338",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "lineHeight": 22,
            "minHeight": 125,
            "padding": 14,
            "paddingTop": 16,
            "textAlignVertical": "top",
          },
          Object {
            "minHeight": 90,
          },
        ]
      }
      underlineColorAndroid="transparent"
      value="prosper winner find donate tape history measure umbrella agent patrol want rhythm celo"
    />
  </View>
</View>
`;

exports[`renders correctly for readonly backup phrase 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 22,
        }
      }
    >
      backupKey
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#FFF9EE",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginTop": 16,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
        }
      }
    >
      prosper winner find donate tape history measure umbrella agent patrol want rhythm old unable wash wrong need fluid hammer coach reveal plastic trust lake
    </Text>
  </View>
</View>
`;

exports[`renders correctly for readonly social backup phrase 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 2,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 16,
          "lineHeight": 22,
        }
      }
    >
      socialBackupPhraseHeader
    </Text>
  </View>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#FFF9EE",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginTop": 16,
        "padding": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 22,
        }
      }
    >
      prosper winner find donate tape history measure umbrella agent patrol want rhythm celo
    </Text>
  </View>
</View>
`;
